--- a/index.html
+++ b/index.html
@@ -4,10 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/sandstone/bootstrap.min.css">
     <title>Mis Tareas</title>
 </head>
 <body>
-    <h1>Hello Nicolas!!</h1>
-    <script src="index.js"></script>
+    <h1>Tasks!!</h1>
+
+    <div class="container p-4">
+      <div class="row">
+          <div class="col-md-6">
+              <div class="card">
+                  <div class="card-body">
+                    <form id="task-form">
+                        <div class="form-group">
+                            <input type="text" id="task-title" class="form-control"
+                            placeholder="Task Title" autofocus>
+                        </div>
+                        <div class="form-group">
+                            <textarea  id="task-description"  rows="3" 
+                            class="form-control"
+                            placeholder="Task Description"></textarea>
+                        </div>
+                        <button class="btn btn-primary">Save</button>
+                    </form>
+                
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
+    <!-- Tasks List -->
+    <div class="col-md-6" id="tasks-container"></div>
+
+
+    </div>
+
+    <script type="module" src="./index.js"></script>
+    
 </body>
 </html>
